# Nada

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  vcpkg.json
.github/workflows/: build.yml
resources/: resources.qrc
resources/icons/: nada.icns
src/: main.cpp
src/decoder/: AudioDecoder.h  DecoderFactory.cpp  DecoderFactory.h  FlacDecoder.cpp  FlacDecoder.h  Mp3Decoder.cpp  Mp3Decoder.h  WavDecoder.cpp  WavDecoder.h
src/dsp/: BiquadFilter.h  CrossfeedProcessor.h  Dither.h  DspChain.cpp  DspChain.h  ParametricEQ.cpp  ParametricEQ.h  ReplayGainProcessor.h  SoftClipper.h
src/engine/: PlaybackEngine.cpp  PlaybackEngine.h  RingBuffer.h
src/output/: AudioOutput.h  AudioOutputFactory.cpp  CoreAudioOutput.cpp  CoreAudioOutput.h
src/ui/: EQView.cpp  EQView.h  FreqResponseGraph.cpp  FreqResponseGraph.h  LibraryModel.cpp  LibraryModel.h  LibraryView.cpp  LibraryView.h  MainWindow.cpp  MainWindow.h  NowPlayingView.cpp  NowPlayingView.h  PlayingIndicator.cpp  PlayingIndicator.h  QueueView.cpp  QueueView.h  SettingsView.cpp  SettingsView.h  SlimSlider.cpp  SlimSlider.h  SystemTray.cpp  SystemTray.h  Theme.h  ToggleSwitch.cpp  ToggleSwitch.h  VisualizerWidget.cpp  VisualizerWidget.h  WaveformSeekBar.cpp  WaveformSeekBar.h
tests/: CMakeLists.txt  test_decoders.cpp  test_dsp.cpp  test_library.cpp  test_playlist.cpp
